--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -63,7 +63,7 @@
     .link {
       color: #737373;
       font-size: 0.9em;
-      a {
+      span {
         text-decoration: underline;
         text-decoration-color: #737373;
       }
