--- a/src/components/Code/index.module.scss
+++ b/src/components/Code/index.module.scss
@@ -8,7 +8,12 @@
 
     &::-webkit-scrollbar {
       height: 11px;
+      width: 11px;
       border-radius: 15px;
+    }
+
+    &::-webkit-scrollbar-corner {
+      background-color: rgba(0, 0, 0, 0);
     }
 
     &::-webkit-scrollbar-track {
