--- a/src/components/Code/index.module.css
+++ b/src/components/Code/index.module.css
@@ -10,7 +10,12 @@
 
 .code pre::-webkit-scrollbar {
   height: 11px;
+  width: 11px;
   border-radius: 15px;
+}
+
+.code pre::-webkit-scrollbar-corner {
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .code pre::-webkit-scrollbar-track {
