--- a/src/pages/Community/subpage/Setup/index.module.css
+++ b/src/pages/Community/subpage/Setup/index.module.css
@@ -1,6 +1,14 @@
 .setupcontainer {
   position: relative;
   overflow-x: hidden;
+  --horizontal-padding: 50px;
+  padding: 0 var(--horizontal-padding);
+}
+
+@media screen and (max-width: 650px) {
+  .setupcontainer {
+    --horizontal-padding: 25px;
+  }
 }
 
 .setupcontainer .shadowCircle {
@@ -16,41 +24,37 @@
   width: 100%;
   margin: auto;
   position: relative;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 50px;
 }
 
 .setupcontainer .setup .content {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 20px;
+  position: relative;
 }
 
 .setupcontainer .setup .content .title {
   font-size: 2em;
   font-weight: 700;
+  line-height: 1em;
+  margin-top: 12px;
+  margin-bottom: 25px;
 }
 
 .setupcontainer .setup .content .title::before {
   content: attr(data-mark);
   position: absolute;
-  top: 0;
-  left: 10px;
+  top: -30px;
+  left: -65px;
   font-size: 7em;
   font-weight: 900;
   color: transparent;
-  -webkit-text-stroke: 0.25px #F0F0F0;
+  -webkit-text-stroke: 0.25px #f0f0f0;
+  z-index: -1;
 }
 
 @media screen and (max-width: 960px) {
@@ -70,7 +74,8 @@
 }
 
 .setupcontainer .setup .content .description {
-  color: #4D4D4D;
+  color: #4d4d4d;
+  max-width: 450px;
 }
 
 .setupcontainer .setup .content .download {
@@ -80,42 +85,28 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  gap: 30px;
+  margin-top: 30px;
 }
 
 .setupcontainer .setup .content .download a {
-  padding: 0.75em 2.5em;
+  padding: 0.5em 2.2em;
   border-radius: 9999px;
   font-weight: 700;
   font-size: 1em;
 }
 
 .setupcontainer .setup .content .download .json {
-  padding: 0.8125em 2.5625em;
-  background-color: #008F75;
-  border: 2px solid #008F75;
+  background-color: #008f75;
+  border: 2px solid #008f75;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-transition-property: background-color;
-  transition-property: background-color;
-  -webkit-transition-duration: 500ms;
-          transition-duration: 500ms;
-  -webkit-transition-timing-function: ease-in;
-          transition-timing-function: ease-in;
   color: white;
 }
 
-.setupcontainer .setup .content .download .json:hover {
-  background-color: #11caa8;
-}
-
 .setupcontainer .setup .content .download .container {
-  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+  background-image: linear-gradient(138.94deg, #9d50f6 33.05%, #00d1ab 80.37%);
   padding: 1px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -132,14 +123,6 @@
   border-radius: 999px;
 }
 
-.setupcontainer .setup .content .download .container:hover {
-  background-image: linear-gradient(-138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
-}
-
-.setupcontainer .setup .content .download .container:hover .template::before {
-  background-image: linear-gradient(-138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
-}
-
 .setupcontainer .setup .content .download .container .template {
   background: white;
   border: 2px solid transparent;
@@ -152,13 +135,12 @@
   width: fit-content;
 }
 
-.setupcontainer .setup .content .download .container .template::before {
-  content: "Download Template";
+.setupcontainer .setup .content .download .container .template span {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   color: transparent;
   background-clip: text;
-  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+  background-image: linear-gradient(138.94deg, #9d50f6 33.05%, #00d1ab 80.37%);
   -webkit-transition-property: background-image;
   transition-property: background-image;
   -webkit-transition-duration: 500ms;
@@ -168,15 +150,17 @@
 }
 
 .setupcontainer .setup .editor {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
-  width: 40%;
+  max-width: 600px;
+}
+
+.setupcontainer .setup .editor div {
+  z-index: 3;
 }
 
 .setupcontainer .setup .editor div::after {
   content: "";
   position: absolute;
-  background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+  background-image: linear-gradient(100.55deg, #7450f6 13.34%, #cf50f6 97.24%);
   border-radius: 8px;
   top: 5px;
   bottom: -10px;
@@ -197,22 +181,51 @@
   z-index: -1;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1270px) {
   .setupcontainer .setup {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
-    gap: 30px;
+    gap: 60px;
   }
   .setupcontainer .setup .content {
-    width: 90%;
+    -ms-flex-item-align: stretch;
+        -ms-grid-row-align: stretch;
+        align-self: stretch;
+  }
+  .setupcontainer .setup .content .description {
+    max-width: unset;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .setupcontainer .setup .editor {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .setupcontainer .setup .content .download {
+    gap: 20px;
   }
   .setupcontainer .setup .content .download a {
-    font-size: 11px;
+    padding: 0.5em 1em;
   }
-  .setupcontainer .setup .editor {
-    width: 90%;
+}
+
+@media screen and (max-width: 480px) {
+  .setupcontainer .setup .content .download {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .setupcontainer .setup .content .download a.json,
+  .setupcontainer .setup .content .download .container,
+  .setupcontainer .setup .content .download .container a.template {
+    width: 100%;
+    text-align: center;
   }
 }
 
@@ -220,34 +233,36 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 15px;
+  gap: 14px;
+  margin-top: 40px;
   cursor: pointer;
-  -webkit-transition-duration: gap;
-          transition-duration: gap;
-  -webkit-transition-duration: 500ms;
-          transition-duration: 500ms;
-  -webkit-transition-timing-function: ease-in;
-          transition-timing-function: ease-in;
-  margin-left: 5%;
 }
 
-@media screen and (max-width: 960px) {
-  .setupcontainer .communityContainer {
-    margin-top: 20px;
-  }
+.setupcontainer .communityContainer svg {
+  width: 27px;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: -webkit-transform 0.4s;
+  transition: -webkit-transform 0.4s;
+  transition: transform 0.4s;
+  transition: transform 0.4s, -webkit-transform 0.4s;
 }
 
-.setupcontainer .communityContainer:hover {
-  gap: 30px;
+.setupcontainer .communityContainer:hover svg {
+  -webkit-transform: translateX(8px);
+          transform: translateX(8px);
 }
 
 .setupcontainer .communityContainer .communityLink {
   text-decoration: underline;
-  -webkit-text-decoration-color: #3D3DFF;
-          text-decoration-color: #3D3DFF;
-  color: #3D3DFF;
+  -webkit-text-decoration-color: #3d3dff;
+          text-decoration-color: #3d3dff;
+  color: #3d3dff;
 }
 /*# sourceMappingURL=index.module.css.map */
