--- a/src/components/Cards/index.module.scss
+++ b/src/components/Cards/index.module.scss
@@ -15,17 +15,30 @@
   }
   .cards {
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 40px;
+    row-gap: 50px;
     z-index: 5;
+
+    & > a {
+      max-width: 350px;
+      &:nth-child(3n + 1) {
+        justify-self: start;
+      }
+      &:nth-child(3n + 2) {
+        justify-self: center;
+      }
+      &:nth-child(3n + 3) {
+        justify-self: end;
+      }
+    }
   }
   @media screen and (max-width: 1080px) {
     .cards {
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      align-items: center;
     }
   }
 
