--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -42,7 +42,8 @@
       }
       span {
         svg {
-          display: none;
+          width: 30px;
+          right: -20px;
         }
       }
     }
