--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -190,6 +190,8 @@
       }
     }
   }
+    .backToCommunityContainer{
+      position: relative;
   .communityContainer {
     display: flex;
     width: fit-content;
@@ -198,13 +200,13 @@
     margin-top: 40px;
     cursor: pointer;
 
-    svg {
+    .Arrow {
       width: 27px;
       transform: translateX(0);
       transition: transform 0.4s;
     }
     &:hover {
-      svg {
+      .Arrow {
         transform: translateX(8px);
       }
     }
@@ -214,4 +216,9 @@
       color: #3d3dff;
     }
   }
+  .BlurWatermark{
+    position: absolute;
+    top: 0;
+  }
+}
 }
