--- a/src/pages/Community/subpage/Setup/index.module.css
+++ b/src/pages/Community/subpage/Setup/index.module.css
@@ -1,6 +1,5 @@
 .setupcontainer {
   position: relative;
-  overflow-x: hidden;
   --horizontal-padding: 50px;
   padding: 0 var(--horizontal-padding);
 }
@@ -205,5 +204,6 @@
 }
 .setupcontainer .backToCommunityContainer .BlurWatermark {
   position: absolute;
-  top: 0;
+  top: -100px;
+  z-index: -1;
 }/*# sourceMappingURL=index.module.css.map */
