--- a/src/components/LoaderCard/index.module.css
+++ b/src/components/LoaderCard/index.module.css
@@ -1,1 +1,38 @@
-/*# sourceMappingURL=index.module.css.map */
+.container {
+  height: 300px;
+  width: 350px;
+  background-image: linear-gradient(131.98deg, #FAFAFA -23.85%, #F2F2F2 87.89%);
+  position: relative;
+  margin-left: 100px;
+}
+.container .loadingLine {
+  position: absolute;
+  left: 30px;
+  background-image: linear-gradient(179.61deg, #FAFAFA -26.96%, #FCFCFC 99.66%);
+  height: 300px;
+  width: 45px;
+  -webkit-animation: loading 3s ease-in-out infinite;
+          animation: loading 3s ease-in-out infinite;
+}
+@-webkit-keyframes loading {
+  0% {
+    left: 15%;
+  }
+  50% {
+    left: 75%;
+  }
+  100% {
+    left: 15%;
+  }
+}
+@keyframes loading {
+  0% {
+    left: 15%;
+  }
+  50% {
+    left: 75%;
+  }
+  100% {
+    left: 15%;
+  }
+}/*# sourceMappingURL=index.module.css.map */
