--- a/src/components/LoaderCard/index.module.scss
+++ b/src/components/LoaderCard/index.module.scss
@@ -1,28 +1,23 @@
 .container {
     height: 300px;
-    width: 350px;
+    width: 100%;
     background-image: linear-gradient(131.98deg, #FAFAFA -23.85%, #F2F2F2 87.89%);
     position: relative;
-    margin-left: 100px;
     .loadingLine{
         position: absolute;
         left: 30px;
         background-image: linear-gradient(179.61deg, #FAFAFA -26.96%, #FCFCFC 99.66%);
         height: 300px;
         width: 45px;
-        animation: loading 3s ease-in-out infinite;
+        animation: loading 3s ease-in-out infinite forwards;
+        animation-play-state: running;
     }
     @keyframes loading {
         0% {
-                left: 15%;
+                left: 0%;
             }
-        
-            50% {
-                left: 75%;
-            }
-        
             100% {
-                left: 15%;
+                left: 85%;
             }
     }
 
