--- a/src/components/LoaderCard/index.module.scss
+++ b/src/components/LoaderCard/index.module.scss
@@ -1,24 +1,29 @@
 .container {
+  height: 300px;
+  width: 100%;
+  max-width: 350px;
+  background-image: linear-gradient(131.98deg, #fafafa -23.85%, #f2f2f2 87.89%);
+  position: relative;
+  overflow: hidden;
+  .loadingLine {
+    position: absolute;
+    left: 30px;
+    background-image: linear-gradient(
+      179.61deg,
+      #fafafa -26.96%,
+      #fcfcfc 99.66%
+    );
     height: 300px;
-    width: 100%;
-    background-image: linear-gradient(131.98deg, #FAFAFA -23.85%, #F2F2F2 87.89%);
-    position: relative;
-    .loadingLine{
-        position: absolute;
-        left: 30px;
-        background-image: linear-gradient(179.61deg, #FAFAFA -26.96%, #FCFCFC 99.66%);
-        height: 300px;
-        width: 45px;
-        animation: loading 3s ease-in-out infinite forwards;
-        animation-play-state: running;
+    width: 45px;
+    animation: loading 2s ease-in-out infinite forwards;
+    animation-play-state: running;
+  }
+  @keyframes loading {
+    0% {
+      left: -65%;
     }
-    @keyframes loading {
-        0% {
-                left: 0%;
-            }
-            100% {
-                left: 85%;
-            }
+    100% {
+      left: 100%;
     }
-
+  }
 }
