--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -71,7 +71,7 @@
       flex-direction: column;
       align-items: flex-start;
       gap: 30px;
-      position: fixed;
+      position: absolute;
       left: 0;
       right: 0;
       top: 0;
