--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -4,44 +4,61 @@
   padding: 40px 50px;
   padding-bottom: 70px;
 }
+
 .footer .logo {
   width: 50px;
 }
+
 .footer p {
   font-size: 15px;
   line-height: 1.5;
 }
+
 .footer h3 {
   font-weight: 700;
 }
+
 .footer .grid {
   margin-top: 20px;
+  display: -ms-grid;
   display: grid;
-  -moz-column-gap: 60px;
-       column-gap: 60px;
-  grid-template-columns: 1fr 1fr;
+  -webkit-column-gap: 60px;
+          column-gap: 60px;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
+
 .footer .grid .talk {
   max-width: 400px;
 }
+
 .footer .contact p {
   margin-bottom: 10px;
   margin-top: 4px;
 }
+
 .footer .contact .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 10px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .footer .contact .icons a {
   width: 25px;
 }
+
 .footer .contact .icons a:last-child {
   width: 20px;
 }
+
 .footer .contact .icons svg {
   width: 100%;
 }
+
 .footer .bottom {
   margin-top: 80px;
   text-align: center;
@@ -49,7 +66,8 @@
 
 @media screen and (max-width: 760px) {
   .footer .grid {
-    grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
     row-gap: 30px;
   }
   .footer .bottom {
@@ -57,9 +75,11 @@
     margin-top: 50px;
   }
 }
+
 @media screen and (max-width: 460px) {
   .footer {
     padding: 40px 20px;
     padding-bottom: 70px;
   }
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
