--- a/src/components/Loader/index.module.scss
+++ b/src/components/Loader/index.module.scss
@@ -1,35 +1,36 @@
-.container{
-    display: flex;
-    gap: 32px;
-    width: fit-content;
-    margin-inline: auto;
-    .icons{
-        width: 32px;
-        height: 32px;
-        border-radius: 50%;
-        background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);;   
-        animation: bouncing 1.5s infinite;
+.container {
+  display: flex;
+  gap: 15px;
+  width: fit-content;
+  margin-inline: auto;
+  height: 45vh;
+  align-items: center;
+  .icons {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    animation: bouncing 1s infinite;
+    transform: translateY(-75%);
+  }
+  .icons:nth-child(2) {
+    animation-delay: 250ms;
+  }
+
+  .icons:nth-child(3) {
+    animation-delay: 500ms;
+  }
+
+  @keyframes bouncing {
+    0%,
+    100% {
+      transform: translateY(-75%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
     }
-    .icons:nth-child(2) {
-                animation-delay: 250ms;
-            }
-        
-            .icons:nth-child(3) {
-                animation-delay: 500ms;
-            }
-        
-            @keyframes bouncing {
-        
-                0%,
-                100% {
-                    transform: translateY(-75%);
-                    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-                }
-        
-                50% {
-                    transform: none;
-                    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-                }
-            }
+
+    50% {
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
-    
+  }
+}
