--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -77,7 +77,6 @@
           font-size: 1em;
         }
 
-
         .container {
           background-image: linear-gradient(
             138.94deg,
@@ -178,7 +177,7 @@
     @media screen and(max-width: 480px) {
       .content .download {
         flex-direction: column;
-        a.json,
+        a,
         .container,
         .container a.template {
           width: 100%;
